# ChangeLog for x11-apps/xclock
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-apps/xclock/ChangeLog,v 1.41 2009/04/22 00:41:44 ranger Exp $

  22 Apr 2009; Brent Baude <ranger@gentoo.org> xclock-1.0.3-r1.ebuild:
  Marking xclock-1.0.3-r1 ppc64 stable for bug 264982

  17 Apr 2009; Jeroen Roovers <jer@gentoo.org> xclock-1.0.3-r1.ebuild:
  Stable for HPPA (bug #264982).

  11 Apr 2009; nixnut <nixnut@gentoo.org> xclock-1.0.3-r1.ebuild:
  ppc stable #264982

  09 Apr 2009; Raúl Porcel <armin76@gentoo.org> xclock-1.0.3-r1.ebuild:
  alpha/arm/ia64/s390/sh stable wrt #264982

  06 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  xclock-1.0.3-r1.ebuild:
  Stable on sparc, bug #264982

  05 Apr 2009; Markus Meier <maekke@gentoo.org> xclock-1.0.3-r1.ebuild:
  x86 stable, bug #264982

  05 Apr 2009; Olivier Crête <tester@gentoo.org> xclock-1.0.3-r1.ebuild:
  Stable on amd64, bug #264982

*xclock-1.0.3-r1 (16 Jan 2009)

  16 Jan 2009; Rémi Cardona <remi@gentoo.org> +xclock-1.0.3-r1.ebuild:
  remove xprint support (see bug #254874)

  19 Dec 2007; Dawid Węgliński <cla@gentoo.org> xclock-1.0.3.ebuild:
  Stable on x86 (bug #202087)

  16 Dec 2007; Markus Rothe <corsair@gentoo.org> xclock-1.0.3.ebuild:
  Stable on ppc64; bug #202087

  16 Dec 2007; nixnut <nixnut@gentoo.org> xclock-1.0.3.ebuild:
  Stable on ppc wrt bug 202087

  15 Dec 2007; Doug Klima <cardoe@gentoo.org> xclock-1.0.3.ebuild:
  amd64 stable wrt bug #202087

  13 Dec 2007; Raúl Porcel <armin76@gentoo.org> xclock-1.0.3.ebuild:
  alpha/ia64 stable wrt #202087

  12 Dec 2007; Ferris McCormick <fmccor@gentoo.org> xclock-1.0.3.ebuild:
  Sparc stable --- Bug #202087 --- good for 3 months.

*xclock-1.0.3 (08 Sep 2007)

  08 Sep 2007; Donnie Berkholz <dberkholz@gentoo.org>; +xclock-1.0.3.ebuild:
  Bump for 7.3.

  10 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>; xclock-1.0.2.ebuild:
  Update description to be less generic.
