@@ -1,8 +1,7 @@
 AUX xclock-1.0.3-winnt.patch 12263 RMD160 528fbef4bb7f9d3fc2a7323bd46d5b5ebdc4d2f9 SHA1 aae6af3871a86a78b131b8cd27916afc688df54b SHA256 3930e3ccb7fa5c1a57308a521d6b8439af851a7e1b713087ae82b8e6bf7d116f
-DIST xclock-1.0.2.tar.bz2 104335 RMD160 f06b33dadeb3513bc59d2b676626052a526aefd1 SHA1 d871dc3a6b723a7bd528a12de7268809fba12105 SHA256 ced648762382eab09e0ccb87371cb745646ede08ffcb068faa6025d20c4d1f3d
 DIST xclock-1.0.3.tar.bz2 113967 RMD160 b6732da07c362a6fd21d12853b456f645ed9b037 SHA1 94bd3f1c57d9d6f5c19f25fcdda3b148b99b6dbe SHA256 10b5777ae9ef2a10d4cf447bd1bf13372d7061573835c2c87d5c948b65e9577f
-EBUILD xclock-1.0.2.ebuild 754 RMD160 6ba8cbed1b1459e2687d3ebd7e0562333bdb239a SHA1 5fd5051d3604bca62e90153a7e30c91b270c6200 SHA256 30d92365a2ea2977bf4ecdf1ec15ec947e982ff9b9a8340a4943f11fb0b17cc4
+DIST xclock-1.0.4.tar.bz2 128766 RMD160 a53a05a4cbf7b301da8d96ad09d58ae2d6d4543d SHA1 1987cafb3163c6b68bc7ecfbe143c8cd373d64bb SHA256 69b903b6305211c9fc5db394f3d08c0a696aa51942d73db7f594422e7be6edf0
 EBUILD xclock-1.0.3-r1.ebuild 757 RMD160 78c7879af0b9ea176811e730040ea3cade45939b SHA1 4384a7ecf05dee814ad0531beb86c9b26e1b17ed SHA256 982e6d1eaba1cc7efe62c08264e6e6cdc93e09f6c2828910656efd0782dbfe08
-EBUILD xclock-1.0.3.ebuild 741 RMD160 b7cd73eb5b9773e56d19ffb3f2e2a6087bcbbd70 SHA1 6e941dd1c3c7960bd97f2e4fde9b5f105f3653b0 SHA256 e80ac17b4e211669f7accc570ace96adf513ca71f321c02c4bd466af08e9bf82
-MISC ChangeLog 4643 RMD160 5e899327d0d318b24bb3b410de649126789266ba SHA1 41affddacab09aea2462249383ccc7774dbf5c66 SHA256 7fbccf3909bc520eac34f63757d93a91bf6344871d50a7d5bfe4feb0508d5cba
+EBUILD xclock-1.0.4.ebuild 726 RMD160 f4e82f3c4826ccd189163338eca97c427168743b SHA1 baf7c1c830ba924b1f4f629039b0a8688d1ca4c1 SHA256 873017910658d483b119b09dee0d077b588bd2a7461358548308d77c1e6ac082
+MISC ChangeLog 4769 RMD160 e04911bb08bc6de20b6bb162e869579263e09140 SHA1 0b7c50fc8f16cd7a2b5ecd9086db8b76fc0f4f60 SHA256 1301d95ba26050148c376e9ba154ff8083a1b1787ecd711a035c75d9674c14b1
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
