@@ -1,28 +1,0 @@
-# Copyright 1999-2006 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/x11-apps/xclock/xclock-1.0.2.ebuild,v 1.9 2006/10/10 23:55:19 dberkholz Exp $
-
-# Must be before x-modular eclass is inherited
-#SNAPSHOT="yes"
-
-inherit x-modular
-
-DESCRIPTION="analog / digital clock for X"
-
-KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris"
-IUSE="xprint"
-
-RDEPEND="x11-libs/libX11
-	x11-libs/libXrender
-	x11-libs/libXft
-	x11-libs/libxkbfile
-	x11-libs/libXaw"
-DEPEND="${RDEPEND}"
-
-CONFIGURE_OPTIONS="$(use_enable xprint)"
-
-pkg_setup() {
-	if use xprint && ! built_with_use x11-libs/libXaw xprint; then
-		die "Build x11-libs/libXaw with USE=xprint."
-	fi
-}
